62d463ac6d77e841e3f5c4ac Fix JEI compat